分治算法排序完成数据拆分